<resources>
    <string name="app_name">Punto5</string>
    <string name="hello_world">Hello Android!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="hint_nombre">Digite el nombre</string>
    <string name="correo">Correo</string>
    <string name="hint_correo">Digite el correo</string>
    <string name="tel">Telefono</string>
    <string name="hint_tel">Digite el Telefono</string>
    <string name="boton">OK</string>


    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="hobbie">Hobbies</string>
    <string name="deporte">Deporte</string>
    <string name="leer">Leer</string>
    <string name="videojuegos">Videojuegos</string>
    <string name="cocinar">Cocinar</string>
    <string name="ciudad">Ciudad</string>
    <string name="nacimiento">Fecha de Nacimiento</string>

    <string-array name="cities_array">
        <item>Arauca</item>
        <item>Armenia</item>
        <item>Barranquilla</item>
        <item>Bogotá</item>
        <item>Bucaramanga</item>
        <item>Cali</item>
        <item>Cartagena</item>
        <item>Cúcuta</item>
        <item>Florencia</item>
        <item>Ibagué</item>
        <item>Leticia</item>
        <item>Manizales</item>
        <item>Medellín</item>
        <item>Mitú</item>
        <item>Mocoa</item>
        <item>Montería</item>
        <item>Neiva</item>
        <item>Pereira</item>
        <item>Popayan</item>
        <item>Puerto Carreño</item>
        <item>Puerto Inírida</item>
        <item>Quibdó</item>
        <item>Riohacha</item>
        <item>San Andrés</item>
        <item>San José del Guaviare</item>
        <item>San Juan de Pasto</item>
        <item>Santa Marta</item>
        <item>Sincelejo</item>
        <item>Tunja</item>
        <item>Valledupar</item>
        <item>Villavicencio</item>
        <item>Yopal</item>
    </string-array>


</resources>
